// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/TextLink As Anchor 1`] = `
<a
  className="text-blue-500 underline transition hover:opacity-60 cursor-pointer focus-offset "
  href="#"
  onClick={[Function]}
>
  Hi! I'm an anchor looking like a link
</a>
`;

exports[`Storyshots UI Elements/TextLink As Button 1`] = `
<button
  className="text-blue-500 underline transition hover:opacity-60 cursor-pointer focus-offset "
  href="#"
  onClick={[Function]}
  type="button"
>
  Hi! I'm an button looking like a link
</button>
`;
